Fri Dec 15 03:37:51 2000  J"orn Rennecke <amylaar@redhat.com>

	* haifa-sched.c (sched_init): Don't put a note in front of any BARRIER.

2000-12-14  Jim Wilson  <wilson@redhat.com>

	* alias.c (get_alias_set): Call record_component_aliases for
	COMPLEX_TYPE.
	(record_component_aliases): Handle COMPLEX_TYPE.
	
2000-12-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* fixinc/gnu-regex.c: Disable NLS.

2000-12-14  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.c (alpha_emit_conditional_move): Do not swap
	comparison operands when that would create non-canonical rtl.

	* config/i386/i386.md (umulsi3_highpart): Remove * from name.
	(smulsi3_highpart): Likewise.

2000-12-14  Neil Booth  <neil@daikokuya.demon.co.uk>

	* gcc.c (cpp_options): Add -remap.

2000-12-14  Neil Booth  <neil@daikokuya.demon.co.uk>

       * gcc.c (cpp_options): Update to use '&'.
       (struct switchstr): Change type of validated to save space.
       New member 'ordering'.
       (handle_braces, validate_switches): Update to handle '&'.       

2000-12-13  Laurynas Biveinis  <lauras@softhome.net>

        * fixinc/inclhack.def: skip stdio_va_list fix if __DJ_va_list
        found in a header.
        * fixinc/fixincl.x: regenerated.

2000-12-13  DJ Delorie  <dj@redhat.com>

	* config.gcc (cygwin, win32, mingw32): Use float-i386.h.

2000-12-13  Tom Tromey  <tromey@redhat.com>

	* gcc.c (handle_braces): Handle %{<S*} spec correctly.

2000-12-13  Alexandre Oliva  <aoliva@redhat.com>

	* function.c (assign_parms): Optimize incoming PARALLELs into
	REGs if possible.

2000-12-13  Bruce Korb  <bkorb@gnu.org>

	* fixinc/Makefile.in(*): substantial rewrite to accommodate systems
	that cannot handle bi-directional pipes, viz. BeOS and DOS.
	* fixinc/fixlib.h(IGNORE_ARG): new macro
	(STATIC): define for all of fixinc to use
	* fixinc/fixfixes.c(*): eliminate unused arg warnings
	* fixinc/fixtests.c(*): ditto
	* fixinc/fixincl.c(start_fixer): chain_open now uses const arg list